fixed the positioning problem on the side and added the html changes for logo link

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <nav class="nav">
             <div class="logo">
-                <img src="youtube-logo.png" alt="youtube-logo">
+                <a href="https://youtube.com"><img src="youtube-logo.png" alt="youtube-logo"></a>
             </div>
             <div class="search-box">
                 <input type="text" name="search" id="search-input">
@@ -26,20 +26,18 @@
     </header>
     <main>
         <div class="player-section">
-            <div class="player-frame">
-                <iframe class="player" src="https://www.youtube.com/embed/1HfR497RiPo"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    allowfullscreen></iframe>
-            </div>
+            <iframe class="player" src="https://www.youtube.com/embed/1HfR497RiPo" title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
         </div>
-        <div class="sidebar">
-            <ul>
-                <li>video 1</li>
-                <li>video 2</li>
-                <li>video 3</li>
-            </ul>
-        </div>
+
+        <ul class="sidebar">
+            <li>video 1</li>
+            <li>video 2</li>
+            <li>video 3</li>
+        </ul>
+
     </main>
 
 </body>
