basic youtube player page finished (kind of 🤷🏻‍♂️)

--- a/index.html
+++ b/index.html
@@ -26,16 +26,47 @@
     </header>
     <main>
         <div class="player-section">
-            <iframe class="player" src="https://www.youtube.com/embed/1HfR497RiPo" title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
+            <div class="player-container">
+                <iframe class="player" src="https://www.youtube.com/embed/1HfR497RiPo" title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
+                <div class="video-description">
+                    <h2> Samsung Galaxy S23 nad S23 Plus hands-on!</h2>
+                    <p> Unboxing and hands-on with the Samsung Galaxy S23+! This is the retail version from T-Mobile, 512GB in Botanic Green. I also compare the design side-by-side with the S22+. </p>
+                </div>
+            </div>
         </div>
 
         <ul class="sidebar">
-            <li>video 1</li>
-            <li>video 2</li>
-            <li>video 3</li>
+            <li>
+                <a target="_blank" href="https://www.youtube.com/watch?v=Tkw6QU4vm6g&t=221s">
+                    <img
+                        src="https://i.ytimg.com/vi/Tkw6QU4vm6g/hqdefault.jpg?sqp=-oaymwEcCNACELwBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&amp;rs=AOn4CLDnos4_yVMB3L96rgkRkpMoYrl1og">
+                    <div class="sidebar-description">
+                        All-New Porsche 911 (992) GT3 RS Review: Fast, but is it Fun?
+                    </div>
+                </a>
+            </li>
+            <li>
+                <a target="_blank" href="https://www.youtube.com/watch?v=Tkw6QU4vm6g&t=221s">
+                    <img
+                        src="https://i.ytimg.com/vi/Tkw6QU4vm6g/hqdefault.jpg?sqp=-oaymwEcCNACELwBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&amp;rs=AOn4CLDnos4_yVMB3L96rgkRkpMoYrl1og">
+                    <div class="sidebar-description">
+                        All-New Porsche 911 (992) GT3 RS Review: Fast, but is it Fun?
+                    </div>
+                </a>
+            </li>
+            <li>
+                <a target="_blank" href="https://www.youtube.com/watch?v=Tkw6QU4vm6g&t=221s">
+                    <img
+                        src="https://i.ytimg.com/vi/Tkw6QU4vm6g/hqdefault.jpg?sqp=-oaymwEcCNACELwBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&amp;rs=AOn4CLDnos4_yVMB3L96rgkRkpMoYrl1og">
+                    <div class="sidebar-description">
+                        All-New Porsche 911 (992) GT3 RS Review: Fast, but is it Fun?
+                    </div>
+                </a>
+            </li>
+
         </ul>
 
     </main>
